Interna examenes diag 2 OK con responsive

--- a/examenes_diag.html
+++ b/examenes_diag.html
@@ -238,10 +238,32 @@
                             </table>
                         </div>
 
+                        <div class="buttons_test">
+                            <a href="" class="btn leermas">Anterior</a>
+                            <a href="" class="btn lightblue">Siguiente</a>
+                        </div>
+
+                        <div class="cont_resultado_test">
+                            <div class="result">
+                                <span>Su puntuación:</span>
+                                <div class="puntaje">
+                                    0
+                                </div>
+                            </div>
+                            <div class="result">
+                                <span>Su resultado:</span>
+                                <div>
+                                    Aca podra ver su resultado al terminar el test
+                                    <span class="fas fa-question-circle"></span>
+                                </div>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
             </section>
+
+
 
     </main>
 
