avance interna blog

--- a/blog.html
+++ b/blog.html
@@ -156,8 +156,9 @@
     <main>
         <div class="spacer"></div>
 
-        <section class="s_header_dv">
+        <section class="s_blog_general">
             <div class="center">
+
                 <div class="miga">
                     <a href="" class="link_miga">Bogotá Laser</a>
                     <span> / </span>
@@ -166,7 +167,186 @@
                 <h1 class="tit_section">
                     BLOG
                 </h1>
+                
+                <div class="c_nota_destacada">
+                    <h4>Contenido destacado</h4>
+                    <div class="cont_n_destacada">
+                        <a href="">
+                            <div class="tit_picture c1">
+                                Video
+                            </div>
+                            <img width="550" height="333" src="https://picsum.photos/600/400" alt="">
+                        </a>
+                        <div class="info_nota_dest">
+                            <div class="datos_nota">
+                                <h6>Nombre categoría</h6>
+                                <div class="fecha_nota">
+                                    04 mar 2022
+                                </div>
+                            </div>
+                            <h2>¿Qué pasa si no se operan las cataratas? </h2>
+                            <summary>
+                                Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido orem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias
+                            </summary>
+                            <a href="" class="btn lightblue">Leer más</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="c_filtro">
+                    <span>¿Qué quieres ver?</span>
+                    <select name="" id="">
+                        <optgroup>
+                            <option value="" selected disabled>Elige la categoría</option>
+                            <option value="">categoria 1</option>
+                            <option value="">categoria 2</option>
+                            <option value="">categoria 3</option>
+                            <option value="">categoria 4</option>
+                        </optgroup>
+                    </select>
+                </div>
+
+                <div class="c_notas_blog">
+                    <div class="card_nota">
+                        <a href="">
+                            <div class="tit_picture c2">
+                                Nota
+                            </div>
+                            <img width="550" height="333" src="https://picsum.photos/600/400" alt="">
+                        </a>
+                        <div class="desc_card_nota">
+                            <div class="datos_nota">
+                                <h6>Nombre categoría</h6>
+                                <div class="fecha_nota">
+                                    04 mar 2022
+                                </div>
+                            </div>
+                            <h3>It is a long established fact that a reader will be distracted</h3>
+                            <a href="" class="al_right btn leermas">Ver más</a>
+                        </div>
+                    </div>
+                    <div class="card_nota">
+                        <a href="">
+                            <div class="tit_picture c3">
+                                Podcast
+                            </div>
+                            <img width="550" height="333" src="https://picsum.photos/600/400" alt="">
+                        </a>
+                        <div class="desc_card_nota">
+                            <div class="datos_nota">
+                                <h6>Nombre categoría</h6>
+                                <div class="fecha_nota">
+                                    04 mar 2022
+                                </div>
+                            </div>
+                            <h3>It is a long established fact that a reader will be distracted</h3>
+                            <a href="" class="al_right btn leermas">Ver más</a>
+                        </div>
+                    </div>
+                    <div class="card_nota">
+                        <a href="">
+                            <div class="tit_picture c1">
+                                Video
+                            </div>
+                            <img width="550" height="333" src="https://picsum.photos/600/400" alt="">
+                        </a>
+                        <div class="desc_card_nota">
+                            <div class="datos_nota">
+                                <h6>Nombre categoría</h6>
+                                <div class="fecha_nota">
+                                    04 mar 2022
+                                </div>
+                            </div>
+                            <h3>It is a long established fact that a reader will be distracted</h3>
+                            <a href="" class="al_right btn leermas">Ver más</a>
+                        </div>
+                    </div>
+                    <div class="card_nota">
+                        <a href="">
+                            <div class="tit_picture c2">
+                                Nota
+                            </div>
+                            <img width="550" height="333" src="https://picsum.photos/600/400" alt="">
+                        </a>
+                        <div class="desc_card_nota">
+                            <div class="datos_nota">
+                                <h6>Nombre categoría</h6>
+                                <div class="fecha_nota">
+                                    04 mar 2022
+                                </div>
+                            </div>
+                            <h3>It is a long established fact that a reader will be distracted</h3>
+                            <a href="" class="al_right btn leermas">Ver más</a>
+                        </div>
+                    </div>
+                    <div class="card_nota">
+                        <a href="">
+                            <div class="tit_picture c1">
+                                Video
+                            </div>
+                            <img width="550" height="333" src="https://picsum.photos/600/400" alt="">
+                        </a>
+                        <div class="desc_card_nota">
+                            <div class="datos_nota">
+                                <h6>Nombre categoría</h6>
+                                <div class="fecha_nota">
+                                    04 mar 2022
+                                </div>
+                            </div>
+                            <h3>It is a long establishedIt is a long established fact that a reader will be distracted</h3>
+                            <a href="" class="al_right btn leermas">Ver más</a>
+                        </div>
+                    </div>
+                    <div class="card_nota">
+                        <a href="">
+                            <div class="tit_picture c3">
+                                Podcast
+                            </div>
+                            <img width="550" height="333" src="https://picsum.photos/600/400" alt="">
+                        </a>
+                        <div class="desc_card_nota">
+                            <div class="datos_nota">
+                                <h6>Nombre categoría</h6>
+                                <div class="fecha_nota">
+                                    04 mar 2022
+                                </div>
+                            </div>
+                            <h3>It is a long established fact that a reader will be distracted</h3>
+                            <a href="" class="al_right btn leermas">Ver más</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="paginador_blog al_center">
+                    <a href="" class="btn outlineblue">Pag. anterior</a>
+                    <a href="" class="btn lightblue">Pag. siguiente</a>
+                </div>
+
+                <div class="c_notas_recomendadas">
+                    <div class="tit_section_blog">
+                        Contenido recomendado
+                    </div>
+
+                    <div class="grand_con_slider">
+                        <!-- Swiper -->
+                        <div class="swiper swiperNotasRecomendadas">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    
+                                </div>
+                                <div class="swiper-slide">Slide 2</div>
+                                <div class="swiper-slide">Slide 3</div>
+                            </div>
+                        </div>
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
+                    </div>
+
+                </div>
+
+            </div>
         </section>
+
 
     </main>
 
