Interna de blog OK con responsive

--- a/blog.html
+++ b/blog.html
@@ -324,7 +324,9 @@
 
                 <div class="c_notas_recomendadas">
                     <div class="tit_section_blog">
-                        Contenido recomendado
+                        <h3>
+                            Contenido recomendado
+                        </h3>
                     </div>
 
                     <div class="grand_con_slider">
@@ -332,10 +334,36 @@
                         <div class="swiper swiperNotasRecomendadas">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    
+                                    <div class="datos_nota">
+                                        <h6>Nombre categoría</h6>
+                                        <div class="fecha_nota">
+                                            04 mar 2022
+                                        </div>
+                                    </div>
+                                    <h3>It is a long established fact that a reader wilIt is a long established fact that a reader will be distracted</h3>
+                                    <a href="" class="al_right btn leermas">Ver más</a>
                                 </div>
-                                <div class="swiper-slide">Slide 2</div>
-                                <div class="swiper-slide">Slide 3</div>
+                                <div class="swiper-slide">
+                                    <div class="datos_nota">
+                                        <h6>Nombre categoría</h6>
+                                        <div class="fecha_nota">
+                                            04 mar 2022
+                                        </div>
+                                    </div>
+                                    <h3>It is a long established fact that a reader will be distracted</h3>
+                                    <a href="" class="al_right btn leermas">Ver más</a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="datos_nota">
+                                        <h6>Nombre categoría</h6>
+                                        <div class="fecha_nota">
+                                            04 mar 2022
+                                        </div>
+                                    </div>
+                                    <h3>It is a long established fact that a reader will be distracted</h3>
+                                    <a href="" class="al_right btn leermas">Ver más</a>
+                                </div>
+
                             </div>
                         </div>
                         <div class="swiper-button-next"></div>
