--- a/contacto.html
+++ b/contacto.html
@@ -214,7 +214,7 @@
                 <div class="c_contact_map">
                     <div class="info_datos_c">
                         <i class="fas fa-map-marker-alt"></i>
-                        <h3>ENCUATRANOS</h3>
+                        <h3>ENCUÉNTRANOS</h3>
                         <div class="direccion_c">
                             Calle 113 No. 7 - 45 Torre B <br>
 Oficina 1410 y 613
