ajustes finales al proyecto solicitados en el setup

--- a/consulta_val_olftalmologica.html
+++ b/consulta_val_olftalmologica.html
@@ -190,7 +190,7 @@
                 <div class="c_defectos_visuales">
                     <aside class="menu_dv">
                         <div class="btn_menu_dv">
-                            <span class="fas fa-bars"></span>
+                            <div>Defectos</div><span class="fas fa-bars"></span>
                         </div>
                         <div class="items_btn_dv">
                             <a class="active">Consulta de córnea</a>
