--- a/tratamientos.html
+++ b/tratamientos.html
@@ -272,12 +272,39 @@
             <div class="center">
                 <div class="c_otros_tratamientos al_center">
                     <h4>OTROS TRATAMIENTOS</h4>
-                    <div class="desc">
+                    <div class="c_icon_equipos">
+                        <a href="" class="card_i_equipo">
+                            <picture>
+                                <img width="42" height="42" src="images/diseno/05-nuestros-profesionales/i1.svg" alt="">
+                            </picture>
+                            <label for="">tratamiento</label>
+                        </a>
+                        <a href="" class="card_i_equipo">
+                            <picture>
+                                <img width="42" height="42" src="images/diseno/05-nuestros-profesionales/i2.svg" alt="">
+                            </picture>
+                            <label for="">tratamiento</label>
+                        </a>
+                        <a href="" class="card_i_equipo">
+                            <picture>
+                                <img width="42" height="42" src="images/diseno/05-nuestros-profesionales/i3.svg" alt="">
+                            </picture>
+                            <label for="">tratamiento</label>
+                        </a>
+                        <a href="" class="card_i_equipo">
+                            <picture>
+                                <img width="42" height="42" src="images/diseno/05-nuestros-profesionales/i4.svg" alt="">
+                            </picture>
+                            <label for="">tratamiento</label>
+                        </a>
+                    </div>
+
+                    <!-- <div class="desc">
                         Pterigión, oftalmología Pediátrica, capsulotomía, Iridoplastia
                     </div>
                     <div class="cont_btn al_center">
                         <a href="" class="btn lightblue">Conoce más</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
